# surfacedocs-python

./: .coverage  LICENSE  README.md  pyproject.toml
AGENTS/: CLIENT_TASK.md  DOCS_TASK.md  E2E_TEST_TASK.md  LLM_QUICKSTARTS_TASK.md  ORCHESTRATION.md  PROD_QUICKSTART_TASK.md  PROMPT_TASK.md  PUBLISH_TASK.md  QUICKSTART_EXAMPLE_TASK.md  SCHEMA_EXAMPLES_TASK.md  SCHEMA_TASK.md  SETUP_TASK.md  TESTS_TASK.md
examples/: e2e_gemini.py  quickstart.py  quickstart_anthropic.py  quickstart_gemini.py  quickstart_openai.py
src/surfacedocs/: __init__.py  client.py  exceptions.py  prompt.py  schema.py
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_init.py  test_prompt.py  test_schema.py  test_slidev.py
