[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surfacedocs"
version = "0.1.0"
description = "Python SDK for SurfaceDocs - Save LLM-generated documents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SurfaceDocs", email = "hello@surfacedocs.dev" },
    { name = "Sam Gallagher", email = "gallaghersam95@gmail.com" }
]
keywords = ["llm", "documentation", "ai", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "build",
]

[project.urls]
Homepage = "https://surfacedocs.dev"
Documentation = "https://app.surfacedocs.dev/public/d/doc_VYMSDUFWvYBO"

[tool.hatch.build.targets.wheel]
packages = ["src/surfacedocs"]
